crates/core/src/snapshots/marzano_core__parse__tests__simple_notebook.snap
---
source: crates/core/src/parse.rs
expression: "verify_notebook(source, path, false)"
---
module                         | print(4)\nprint("3")\nprint(5)\n
call                           | print(4)
identifier                     | print
argument_list                  | (4)
(                              | (
integer                        | 4
)                              | )
call                           | print("3")
identifier                     | print
argument_list                  | ("3")
(                              | (
string                         | "3"
string_start                   | "
string_content                 | 3
string_end                     | "
)                              | )
call                           | print(5)
identifier                     | print
argument_list                  | (5)
(                              | (
integer                        | 5
)                              | )
