crates/core/src/snapshots/marzano_core__parse__tests__verify_notebook-2.snap
---
source: crates/core/src/parse.rs
expression: simple_rep
---
module                         | import configparser\n\n\n\nconfig = configparser.ConfigParser()\n\nconfig.read("./secrets.ini")
import_statement               | import configparser
import                         | import
dotted_name                    | configparser
identifier                     | configparser
assignment                     | config = configparser.ConfigParser()
identifier                     | config
=                              | =
call                           | configparser.ConfigParser()
attribute                      | configparser.ConfigParser
identifier                     | configparser
.                              | .
identifier                     | ConfigParser
argument_list                  | ()
(                              | (
)                              | )
call                           | config.read("./secrets.ini")
attribute                      | config.read
identifier                     | config
.                              | .
identifier                     | read
argument_list                  | ("./secrets.ini")
(                              | (
string                         | "./secrets.ini"
string_start                   | "
string_content                 | ./secrets.ini
string_end                     | "
)                              | )
